--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,10 @@
 /* NAVBAR */
-
+body{
+  font-family: 'Montserrat', sans-serif;
+}
 .navbar {
     background-color: #340444;
     padding: .5rem 1rem;
-    font-family: 'Montserrat', sans-serif;
     font-weight: bolder;
     display: flex;
     flex-wrap: wrap;
@@ -36,7 +37,6 @@
     .navbar-expand-sm .navbar-toggler {
       display: none;
     }
-    
   }
 
 #mainNav{
@@ -104,7 +104,7 @@
   }
 
 /* masthead section */
-span {
+.masthead span {
 
     -moz-border-radius: 150px;
     border-radius: 150px;
@@ -115,7 +115,7 @@ span {
 }
 
 .masthead{
-    padding: 9em 2em;
+    padding: 9em 2em 2em 2em;
     font-family: 'Montserrat', sans-serif;
     background-color: #C63AF5;
 }
@@ -132,7 +132,7 @@ span {
 @media (min-width: 992px) {
     .masthead {
       padding-top: calc(6rem + 104px);
-      padding-bottom: 6rem;
+      padding-bottom: 3rem;
     }
     .masthead .masthead-heading {
       font-size: 4rem;
@@ -145,7 +145,7 @@ span {
 }
 
 .divider-custom {
-    margin: 1.25rem 0 1.5rem;
+    /*margin: 0 1.5rem;*/
     width: 100%;
     display: flex;
     justify-content: center;
@@ -159,12 +159,77 @@ span {
     border-radius: 1rem;
     border-color: #2c3e50 !important;
   }
-  .divider-custom .divider-custom-line:first-child {
+  .masthead .divider-custom .divider-custom-line:first-child {
     margin-right: 2rem;
   }
-  .divider-custom .divider-custom-line:last-child {
+  .masthead .divider-custom .divider-custom-line:last-child {
     margin-left: 2rem;
   }
-  .divider-custom.divider-light .divider-custom-line {
+  .masthead .divider-custom.divider-light .divider-custom-line {
     background-color: #fff;
+  }
+
+  /* Portfolio Section*/
+
+  .portfolio {
+    margin-bottom: -30px;
+  }
+  .portfolio .portfolio-item {
+    cursor: pointer;
+    position: relative;
+    display: block;
+    max-width: 25rem;
+    max-height: 20rem;
+    margin-bottom: 30px;
+    border-radius: 0.5rem;
+    overflow: hidden;
+  }
+  .portfolio .portfolio-item .portfolio-item-caption {
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition: all 0.2s ease-in-out;
+    opacity: 0;
+    background-color: rgba(198, 58, 245, 0.75);
+  }
+  .portfolio .portfolio-item .portfolio-item-caption:hover {
+    opacity: 1;
+  }
+  .portfolio
+    .portfolio-item
+    .portfolio-item-caption
+    .portfolio-item-caption-content {
+    font-size: 1.5rem;
+  }
+  .portfolio-modal .portfolio-modal-title {
+    font-size: 2.25rem;
+    line-height: 2rem;
+  }
+  @media (min-width: 992px) {
+    .portfolio-modal .portfolio-modal-title {
+      font-size: 3rem;
+      line-height: 2.5rem;
+    }
+  }
+  .portfolio-modal .close {
+    position: absolute;
+    z-index: 1;
+    right: 1.5rem;
+    top: 1rem;
+    font-size: 3rem;
+    line-height: 3rem;
+    color: #340444;
+    opacity: 1;
+  }
+
+  .portfolio-modal img{
+    max-width: 300px;
+  }
+
+  .modalButton{
+    background-color: #C63AF5;
+  }
+
+  html {
+    scroll-behavior: smooth;
   }
