--- a/css/main.css
+++ b/css/main.css
@@ -153,6 +153,7 @@ body{
   }
   .divider-custom .divider-custom-line {
     width: 80%;
+    margin: 0 20px;
     max-width: 8rem;
     height: 0.20rem;
     background-color: #2c3e50;
